--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "country-state-city": "^3.2.1",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.429.0",
+    "motion": "^12.4.10",
     "next": "14.2.6",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
