--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "country-state-city": "^3.2.1",
+    "date-fns": "^4.1.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.429.0",
     "motion": "^12.4.10",
